--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <p><strong>Full name:</strong> Lingling Sirilak Kwong - หลิงหลิง ศิริลักษณ์ คอง</p>
     <p><strong>Nickname:</strong> 00K</p>
     <p><strong>D.O.B:</strong> 11/05/1995</p>
-    <p><strong>Ethnicity:</strong> Thai - Hong Kong</p>
+    <p><strong>Ethnicity:</strong> Thai 🇹🇭 - Hong Kong 🇭🇰</p>
     <p><strong>Languages:</strong> Fluent in Chinese, Thai, English</p>
-    <p><strong>Education:</strong> Bachelor of Arts in Tourism Management - International College of Khon Kaen University</p>
+    <p><strong>🎓 Education:</strong> Bachelor of Arts in Tourism Management - International College of Khon Kaen University</p>
     <p><strong>Occupation:</strong> Actress (under Channel 3 - CH3)</p>
-    <p><strong>Notable works:</strong></p>
+    <p><strong>🎬 Notable works:</strong></p>
     <ul>
         <li>Only You (2025)</li>
         <li>The Secret Of Us (2024)</li>
         <li>Royal Doctor (2023)</li>
         <li>Makkali The Love Tree (2023)</li>
     </ul>
-    <p><strong>CEO</strong> of fashion brand <strong>Always Wonder</strong></p>
-    <p><strong>Partner:</strong> Orm Kornnaphat Sethnaratapong</p>
-    <p><strong>Social Platforms:</strong></p>
+    <p><strong>💼 CEO</strong> of fashion brand <strong>Always Wonder</strong></p>
+    <p><strong>💖👩 Partner:</strong> Orm Kornnaphat Sethnaratapong</p>
+    <p><strong>📱 Social Platforms:</strong></p>
     <ul>
         <li>Instagram: @linglingkwong</li>
         <li>X (Twitter): @linglingsirilak</li>
