--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <li>Weibo: LinglingKwong_TH</li>
     </ul>
 
-    <img src="1.jpeg" alt="Lingling 1">
-    <img src="2.jpeg" alt="Lingling 2">
-    <img src="3.jpeg" alt="Lingling 3">
+    <img src="1.jpeg" alt="1jpeg">
+    <img src="2.jpeg" alt="2jpeg">
+    <img src="3.jpeg" alt="3jpeg">
 
     <audio autoplay loop>
         <source src="lingling_full_autoplay.mp3" type="audio/mpeg">
